# FTCS_3D

./: CMakeLists.txt  cart_demo.c  main.c  plot_mat.py
include/: cart.h  grid.h  matrix.h
lib/: cart.c  grid.c  matrix.c
